# karp-backend-rs

./: Cargo.toml  README.md
.github/workflows/: check.yml  ci.yml  coverage.yml
libs/karp-lex/: Cargo.toml
libs/karp-lex/src/: lib.rs
libs/karp-lex/src/application/: mod.rs
libs/karp-lex/src/application/queries/: entries.rs  mod.rs
libs/karp-lex/src/domain/entities/: entry.rs
