[package]
name = "karp-lex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.22", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
ulid = { version = "1.0.0", features = ["serde", "uuid"] }
uuid = { version = "1.1.2", features = ["v4", "serde"] }
